update deployment history function